--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>Draw a figure in the box below or insert an image file to have the 
     handwriting analyzer determine the number!</p>
   </div>
+  
+  <script>createPaint(document.body);</script>
 
 </body>
 </html>
