--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>omg</title>
 </head>
 <body>
-#geet
+
   <div id="title">
     <h1>Handwriting Analyzer</h1>
   </div>
@@ -14,6 +14,8 @@
     <p>Draw a figure in the box below or insert an image file to have the 
     handwriting analyzer determine the number!</p>
   </div>
+  
+  <script>createPaint(document.body);</script>
 
 </body>
 </html>
